--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_landing_page.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_landing_page.html
@@ -13,29 +13,28 @@
   <div class="container">
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
 
-      {% for workspace_type, workspace_name in reg_workspaces.items %}
+      {% for workspace_adapter in reg_workspaces %}
       <div class="col">
         <div class="card shadow-sm">
-          <h5 class="card-header"><span class="fa-solid fa-computer mx-2"></span>{{ workspace_name }}s</h5>
+          <h5 class="card-header"><span class="fa-solid fa-computer mx-2"></span>{{ workspace_adapter.get_name }}s</h5>
           <div class="card-body">
             <p>
-              Interact with {{ workspace_name }}s on AnVIL.
-              {% if show_edit_links %}You can create or import workspaces and then share them with a group.{% endif%}
+              {{ workspace_adapter.get_description }}
             </p>
           </div>
 
           <ul class="list-group list-group-flush">
             <li class ="list-group-item">
-              <a href="{% url 'anvil_consortium_manager:workspaces:list' workspace_type %}" class="icon-link">List workspaces</a>
+              <a href="{% url 'anvil_consortium_manager:workspaces:list' workspace_adapter.get_type %}" class="icon-link">List workspaces</a>
               <span class="fa-solid fa-angle-right"></span>
             </li>
             {% if show_edit_links %}
             <li class ="list-group-item">
-              <a href="{% url 'anvil_consortium_manager:workspaces:new' workspace_type %}" class="icon-link">Add a workspace</a>
+              <a href="{% url 'anvil_consortium_manager:workspaces:new' workspace_adapter.get_type %}" class="icon-link">Add a workspace</a>
               <span class="fa-solid fa-angle-right"></span>
             </li>
             <li class ="list-group-item">
-              <a href="{% url 'anvil_consortium_manager:workspaces:import' workspace_type  %}" class="icon-link">Import a workspace from AnVIL</a>
+              <a href="{% url 'anvil_consortium_manager:workspaces:import' workspace_adapter.get_type  %}" class="icon-link">Import a workspace from AnVIL</a>
               <span class="fa-solid fa-angle-right"></span>
             </li>
             {% endif %}
