Include model name in email html title/h1
Include the model name in the h1 field of the email audit report
template. Obtain the model name from the model's meta object, but
use the object_name field instead of the verbose_name_plural. This
makes it nicer to put in the header. Modify tests checking the output
to check for eg "BillingProject... ok!" instead of "billing projects... ok!"

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/email_audit_report.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/email_audit_report.html
@@ -1,13 +1,18 @@
-{% autoescape off %}
+{% extends "anvil_consortium_manager/base.html" %}
+{% block title %}Audit Errors{% endblock %}
 
 {% load render_table from django_tables2 %}
 
 {% block content %}
 
+<h1>Audit report - {{ model_name }}</h1>
+
+<h2>Verified</h2>
+
+<h2>Errors</h2>
 {% render_table errors_table %}
 
+<h2>Not in app</h2>
 {% render_table not_in_app_table %}
 
 {% endblock content %}
-
-{% endautoescape %}
