--- a/anvil_consortium_manager/templates/anvil_consortium_manager/audit.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/audit.html
@@ -35,7 +35,7 @@
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseVerifiedOne" aria-expanded="falase" aria-controls="collapseVerifiedOne">
           <span class="fa-solid fa-circle-check mx-2"></span>
           Verified
-          <span class="badge mx-2 {% if audit_verified %}bg-success{% else %}bg-secondary{% endif %} pill"> {{ audit_verified|length }}</span>
+          <span class="badge mx-2 {% if verified_table.rows %}bg-success{% else %}bg-secondary{% endif %} pill"> {{ verified_table.rows|length }}</span>
         </button>
       </h2>
       <div id="collapseVerifiedOne" class="accordion-collapse collapse" aria-labelledby="headingVerifiedOne" data-bs-parent="#accordionVerified">
@@ -43,22 +43,7 @@
 
           <p>This table shows the number of records in the app that were verified against AnVIL.</p>
 
-          <div class="table-container">
-            <table class="table">
-              <thead>
-                <tr>
-                  <th>Model instance</th>
-                </tr>
-              </thead>
-              <tbody>
-                {% for obj in audit_verified %}
-                  <tr>
-                    <td><a href="{{obj.get_absolute_url}}">{{ obj }}</a></td>
-                  </tr>
-                {% endfor %}
-              </tbody>
-            </table>
-          </div>
+          {% render_table verified_table %}
 
         </div>
       </div>
@@ -76,7 +61,7 @@
           <span class="fa-solid fa-triangle-exclamation mx-2"></span>
           Errors
 
-          <span class="badge mx-2 {% if audit_errors %}bg-danger{% else %}bg-secondary{% endif %} pill"> {{ audit_errors|length }}</span>
+          <span class="badge mx-2 {% if error_table.rows %}bg-danger{% else %}bg-secondary{% endif %} pill"> {{ error_table.rows|length }}</span>
         </button>
       </h2>
       <div id="collapseErrorsOne" class="accordion-collapse collapse" aria-labelledby="headingErrorsOne" data-bs-parent="#accordionErrors">
@@ -84,24 +69,7 @@
 
           <p>This table shows the number of records that had errors when verifying information in the app against AnVIL.</p>
 
-          <div class="table-container">
-            <table class="table">
-              <thead>
-                <tr>
-                  <th>Model instance</th>
-                  <th>Errors</th>
-                </tr>
-              </thead>
-              <tbody>
-                {% for obj, errors in audit_errors.items %}
-                  <tr>
-                    <td><a href="{{obj.get_absolute_url}}">{{ obj }}</a></td>
-                    <td>{{ errors|join:", " }}</td>
-                  </tr>
-                {% endfor %}
-              </tbody>
-            </table>
-          </div>
+          {% render_table error_table %}
 
         </div>
       </div>
@@ -118,7 +86,7 @@
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNotInAppOne" aria-expanded="false" aria-controls="collapseNotInAppOne">
           <span class="fa-solid fa-circle-question mx-2"></span>
           Not in app
-          <span class="badge mx-2 {% if audit_not_in_app %}bg-warning{% else %}bg-secondary{% endif %} pill"> {{ audit_not_in_app|length }}</span>
+          <span class="badge mx-2 {% if not_in_app_table.rows %}bg-warning{% else %}bg-secondary{% endif %} pill"> {{ not_in_app_table.rows|length }}</span>
         </button>
       </h2>
       <div id="collapseNotInAppOne" class="accordion-collapse collapse" aria-labelledby="headingNotInAppOne" data-bs-parent="#accordionNotInApp">
@@ -126,22 +94,7 @@
 
           <p>This table shows identifiers for the records that exist in AnVIL but not in the app.</p>
 
-          <div class="table-container">
-            <table class="table">
-              <thead>
-                <tr>
-                  <th>Record</th>
-                </tr>
-              </thead>
-              <tbody>
-                {% for obj in audit_not_in_app %}
-                  <tr>
-                    <td>{{ obj }}</td>
-                  </tr>
-                {% endfor %}
-              </tbody>
-            </table>
-          </div>
+          {% render_table not_in_app_table %}
 
         </div>
       </div>
