--- a/anvil_consortium_manager/templates/anvil_consortium_manager/account_list.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/account_list.html
@@ -7,6 +7,12 @@
 
 {% block content %}
 <div class="container">
+  <div class="alert alert-info" role="alert">
+    <form method="get">
+      {{ filter.form }}
+      <button type="submit" class="btn btn-primary">Filter</button>
+    </form>
+  </div>
 
   <div class="row">
     <div class="col-sm-12">
