--- a/anvil_consortium_manager/templates/anvil_consortium_manager/billingproject_list.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/billingproject_list.html
@@ -2,23 +2,22 @@
 {% load static %}
 
 {% load render_table from django_tables2 %}
+{% load crispy_forms_tags %}
 
 {% block title %}Billing Projects{% endblock %}
 
 {% block content %}
 <div class="container">
-  <div class="alert alert-info" role="alert">
-
-      <form method="get">
-        {{ filter.form }}
-        <button type="submit" class="btn btn-primary">Filter</button>
-      </form>
-  </div>
 
   <div class="row">
     <div class="col-sm-12">
 
       <h2>Billing Projects</h2>
+
+
+      <div class="container pt-3">
+        {% crispy filter.form %}
+      </div>
 
       {% render_table table %}
 
