--- a/anvil_consortium_manager/templates/anvil_consortium_manager/account_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/account_detail.html
@@ -63,6 +63,10 @@
         </h2>
         <div id="collapseGroupsOne" class="accordion-collapse collapse" aria-labelledby="headingGroupsOne" data-bs-parent="#accordionGroups">
           <div class="accordion-body">
+            <p>
+              This table shows groups that the Account is directly in, either as a member or as an admin.
+            </p>
+
             {% render_table group_table %}
           </div>
         </div>
@@ -82,6 +86,12 @@
         </h2>
         <div id="collapseAccessibleWorkspacesOne" class="accordion-collapse collapse" aria-labelledby="headingAccessibleWorkspacesOne" data-bs-parent="#accordionAccessibleWorkspaces">
           <div class="accordion-body">
+            <p>
+              This table shows Workspaces that the Account can access.
+              To be able to access a Workspace, a user must be a member of all authorization domains for that Workspace and the Workspace must be shared with a Managed Group that they are part of.
+              If a Workspace is shared with one Managed Group as a Reader and a second Managed Group as a writer, both records will appear in the table.
+            </p>
+
             {% render_table accessible_workspace_table %}
           </div>
         </div>
